--- a/css/estilos.css
+++ b/css/estilos.css
@@ -50,3 +50,16 @@
 #botao-sync {
     float: right;
 }
+
+.select-usuarios {
+    display: inline-block;
+}
+
+#usuarios {
+    display: block;
+}
+
+.selectize-input {
+    width: 150px;
+    vertical-align: middle;
+}
